--- a/sync-jira-releases/action.yaml
+++ b/sync-jira-releases/action.yaml
@@ -5,6 +5,12 @@ inputs:
     description: "The URL of the Jira instance"
     required: false
     default: "https://rivertechnologies.atlassian.net"
+  jira-api-token:
+    description: "The API token for Jira"
+    required: true
+  jira-user:
+    description: "The email associated with the Jira account"
+    required: true
 runs:
   using: "node20"
   main: "dist/index.js"
