--- a/sync-jira-releases/package.json
+++ b/sync-jira-releases/package.json
@@ -14,7 +14,8 @@
     "@actions/core": "^1.10.0",
     "@actions/github": "^6.0.0",
     "jira.js": "^5.2.0",
-    "semver": "^7.6.3"
+    "semver": "^7.6.3",
+    "short-unique-id": "^5.3.2"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.38.1"
