--- a/lock-branch/action.yaml
+++ b/lock-branch/action.yaml
@@ -39,9 +39,6 @@ runs:
         REQUIRED_STATUS_CHECKS='${{ inputs.required_status_checks }}'
         STRICT_STATUS_CHECK=${{ inputs.strict_status_check }}
 
-        echo "Locking branch with $REQUIRED_APPROVAL_COUNT required approvals and code owner review requirement set to $REQUIRE_CODE_OWNERS"
-
-        # Handle status checks
         if [ "$REQUIRED_STATUS_CHECKS" != "[]" ] && [ -n "$REQUIRED_STATUS_CHECKS" ]; then
           echo "Required status checks: $REQUIRED_STATUS_CHECKS"
           echo "Strict status check: $STRICT_STATUS_CHECK"
@@ -51,6 +48,8 @@ runs:
           echo "No status checks required"
           STATUS_CHECKS='null'
         fi
+
+        echo "Locking branch with $REQUIRED_APPROVAL_COUNT required approvals, code owner review requirement set to $REQUIRE_CODE_OWNERS, and status checks: $STATUS_CHECKS"
 
         gh api -X PUT "/repos/${{ github.repository }}/branches/${{ inputs.branch_name }}/protection" \
           -H "Accept: application/vnd.github.v3+json" \
